--- a/1/EomTool/EomToolWeb/Views/Advertisers/Edit.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Advertisers/Edit.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Edit Advertiser";
     var statusList = new[] { "", "New", "New1", "New2", "Existing" };
     var paymentTermsList = new[] { "", "Net 7", "Net 7/Biweekly", "Net 15", "Net 30", "Net 45", "Net 60", "Retainer" };
-    var invoicingStatusList = new[] { "", "Not Invoiced", "Invoiced", "Paid", "Positive Retainer", "Negative Retainer" };
+    var invoicingStatusList = new[] { "", "Not Invoiced", "Partially Invoiced", "Invoiced", "Paid", "Positive Retainer", "Negative Retainer" };
 }
 
 <h3>Edit Advertiser</h3>
