--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Home/Index.cshtml
@@ -191,7 +191,7 @@
         function CheckLoadCreative() {
             if ($('#creativeChart').length == 0) {
                 $.ajax({
-                    url: '@Url.Action("CreativePartial", "Reports")',
+                    url: '@Url.Action("Creative", "Reports")',
                     cache: false
                 }).done(function (html) {
                     $('#repCreativeTab').html(html);
