--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_LoginPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_LoginPartial.cshtml
@@ -2,12 +2,12 @@
 
 @if (Request.IsAuthenticated)
 {
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
+    using (Html.BeginForm("LogOff", "Account", new { area = "" }, FormMethod.Post, new { id = "logoutForm" }))
     {
         @Html.AntiForgeryToken()
         if (Model) // HasLogo
         {
-            <span style="margin-right: 20px">Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!</span>          
+            <span style="margin-right: 20px">Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", new { area = "" }, new { @class = "username", title = "Manage" })!</span>
         }
         <a class="button" href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
     }
