--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_HelloPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_HelloPartial.cshtml
@@ -11,7 +11,7 @@
     else
     {
     <p style="text-align: center; margin-top: 30px">
-        <span>Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!</span>
+        <span>Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", new { area = "" }, new { @class = "username", title = "Manage" })!</span>
     </p>          
     }
 }
