--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Home/Index.cshtml
@@ -198,7 +198,7 @@
                 }).done(function (html) {
                     $('#repCreativeTab').html(html);
                     ResizeChart('creative', false);
-                    SetupCreativeGrid();
+                    //SetupCreativeGrid();
                 });
             } else {
                 setTimeout(function () { ResizeChart('creative', true); }, 100);
