--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Summary.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Summary.cshtml
@@ -34,7 +34,7 @@
             $('#tdImpressions').html(kendo.toString(aggs.Impressions.sum, 'N0'));
             $('#tdClicks').html(kendo.toString(aggs.Clicks.sum, 'N0'));
             $('#tdConversions').html(kendo.toString(aggs.Conversions.sum, 'N0'));
-            $('#tdSpend').html(kendo.toString(aggs.Revenue.sum, 'C'));
+            $('#tdSpend').html(kendo.toString(aggs.Spend.sum, 'C'));
         });
     });
 
@@ -71,7 +71,7 @@
                         Impressions: { type: 'number' },
                         Clicks: { type: 'number' },
                         Conversions: { type: 'number' },
-                        Revenue: { type: 'number' }
+                        Spend: { type: 'number' }
                     }
                 }
             },
@@ -80,7 +80,7 @@
                 { field: "Impressions", aggregate: "sum" },
                 { field: "Clicks", aggregate: "sum" },
                 { field: "Conversions", aggregate: "sum" },
-                { field: "Revenue", aggregate: "sum" }
+                { field: "Spend", aggregate: "sum" }
             ],
             requestEnd: function (e) {
                 if (e.type == "read") {
@@ -107,9 +107,8 @@
             series: [
 @for (int i=0; i < metrics.Length; i++)
 {
-    string field = (metrics[i] == "Spend") ? "Revenue" : metrics[i];
     string format = (metrics[i] == "Spend") ? "C" : "N0";
-    <text>{ type: "line", field: "@field", name: "@metrics[i]", axis: "@metrics[i]", markers: { visible: false }, tooltip: { template: "#= kendo.format('{0:d}', category) #: #= kendo.format('{0:@format}',value) #" } }</text>
+    <text>{ type: "line", field: "@metrics[i]", axis: "@metrics[i]", markers: { visible: false }, tooltip: { template: "#= kendo.format('{0:d}', category) #: #= kendo.format('{0:@format}',value) #" } }</text>
     if (i < metrics.Length - 1)
     {
         <text>,</text>
